--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </nav>
 
 <h1 id="about">About me</h1>
-  //<img src="images/Emoticons/cool.png" alt="hi" class="inline"/>
+  <img src="/image.jpeg">
 <p>Hi, my name is Rachel Chen. For the past two years, I have been doing the most challenging and rewarding work, a full-time mother. Although I am still learning on the job and striving on being a better mother, I think it is time for me to get another challenge, which is to be a programmer.</p>
 <p>My most recent full-time work outside home was analyzing data using SQL. I enjoyed the logical thinking and problem solving process. </p>
 
