--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    p, ul, ol, li {
+      font-family: 'UG med';
+      font-size: 18px;
+      line-height: 150%
+    }
+   </style>
 <head>
   <title>Page Title</title>
 </head>
@@ -16,7 +23,7 @@
 </nav>
 
 <h1 id="about">About me</h1>
-  <img src="/image.jpeg">
+  <img src="/image.jpeg" Alt="Rachel with her son">
 <p>Hi, my name is Rachel Chen. For the past two years, I have been doing the most challenging and rewarding work, a full-time mother. Although I am still learning on the job and striving on being a better mother, I think it is time for me to get another challenge, which is to be a programmer.</p>
 <p>My most recent full-time work outside home was analyzing data using SQL. I enjoyed the logical thinking and problem solving process. </p>
 
