--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <style>
       p, ul, ol, li {
         font-family: Inconsolata, monospace;
-        font-size: 18px;
+        font-size: 20px;
         line-height: 150%
       }
       .image {
         width: 150px;
         border-radius: 50%;
+        align: center
       }
+      nav {
+        width: 100%;
+        height: 20vh;
+        min-height: 44px;
+        padding: 0 25px;
+        position: fixed;
+        z-index: 10;
+        background-color: #f5f5f5;
+        transition: height 0.3s line-height 0.3s
+       }
+      .animate-header {
+        animation: landing 3s;
+        -moz-animation: landing 3s;
+        -webkit-animation: landing 3s;
+        -o-animation: landing 3s
+       }
      </style>
 
   </head>
@@ -19,7 +36,7 @@
 
 <nav id="navbar">
   <div class="container">
-  <ul>
+  <ul class="animate-header">
     <a href="#about"><h4>ABOUT ME</h4></a>
     <a href="#work"><h4>MY WORK</h4></a>
     <a href="#contact"><h4>CONTACT ME</h4></a>
