--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         display: inline;
         letter-spacing: 5px;
         font-family: Inconsolata;
+        color: #333;
         font-size: 20px;
         padding: 50px;
       }
@@ -87,42 +88,41 @@
       .container {
         max-width: 800px;
         margin: auto;
-        padding: 30px
+        padding: 30px;
+        margin-bottom: 30px
       }
 
      </style>
-
   </head>
-<body>
 
-<nav id="navbar">
-  <ul class="animate-header">
-    <a href="#about"><h4>ABOUT ME</h4></a>
-    <a href="#work"><h4>MY WORK</h4></a>
-    <a href="#contact"><h4>CONTACT ME</h4></a>
-  </ul>
+  <body>
+    <nav id="navbar">
+      <ul class="animate-header">
+        <a href="#about"><h4>ABOUT ME</h4></a>
+        <a href="#work"><h4>MY WORK</h4></a>
+        <a href="#contact"><h4>CONTACT ME</h4></a>
+      </ul>
+    </nav>
 
-</nav>
+    <div class="container">
+      <h1 id="about">ABOUT ME</h1>
+        <img src="/image.jpeg" Alt="Rachel with her son">
+      <p>Hi, my name is Rachel Chen. For the past two years, I have been doing the most challenging and rewarding work, a full-time mother. Although I am still learning on the job and striving on being a better mother, I think it is time for me to get another challenge, which is to be a programmer.</p>
+      <p>My most recent full-time work outside home was analyzing data using SQL. I enjoyed the logical thinking and problem solving process. </p>
 
-<div class="container">
-<h1 id="about">ABOUT ME</h1>
-  <img src="/image.jpeg" Alt="Rachel with her son">
-<p>Hi, my name is Rachel Chen. For the past two years, I have been doing the most challenging and rewarding work, a full-time mother. Although I am still learning on the job and striving on being a better mother, I think it is time for me to get another challenge, which is to be a programmer.</p>
-<p>My most recent full-time work outside home was analyzing data using SQL. I enjoyed the logical thinking and problem solving process. </p>
+      <h2 id="work">MY WORK</h2>
+      <p>Here are: </p>
+        <ul>
+          <li>the link to my <a href = "https://freecodecamp.org">freeCodeCamp</a> page</li>
+          <li>the link to my <a href = "https://www.codewars.com/users/Rachyanh">Codewars</a> page</li>
+          <li>the link back to the GitHub repo</li>
+          <li>to be continued...</li>
+        </ul>
 
-<h2 id="work">MY WORK</h2>
-<p>Here are: </p>
-  <ul>
-    <li>the link to my <a href = "https://freecodecamp.org">freeCodeCamp</a> page</li>
-    <li>the link to my <a href = "https://www.codewars.com/users/Rachyanh">Codewars</a> page</li>
-    <li>the link back to the GitHub repo</li>
-    <li>to be continued...</li>
-  </ul>
-
-<h3 id="#contact">CONTACT ME</h3>
-<a href="mailto:rachelyanhe@gmail.com">
-  <p>email: rachelyanhe@gmail.com</p>
-</a>
-</div>
-</body>
+      <h3 id="#contact">CONTACT ME</h3>
+      <a href="mailto:rachelyanhe@gmail.com">
+        <p>email: rachelyanhe@gmail.com</p>
+      </a>
+    </div>
+  </body>
 </html>
