Added a link to GitHub repo and more text content
revisited Founders & Coders site and found that I should leave descriptions on what changes I made, as this is a good habit for developers to write descriptive commits.

--- a/index.html
+++ b/index.html
@@ -107,15 +107,17 @@
     <div class="container">
       <h1 id="about">ABOUT ME</h1>
         <img src="/image.jpeg" Alt="Rachel with her son">
-      <p>Hi, my name is Rachel Chen. For the past two years, I have been doing the most challenging and rewarding work, a full-time mother. Although I am still learning on the job and striving on being a better mother, I think it is time for me to get another challenge, which is to be a programmer.</p>
-      <p>My most recent full-time work outside home was analyzing data using SQL. I enjoyed the logical thinking and problem solving process. </p>
+        <p>Hi, my name is Rachel Chen. For the past two years, I have been doing the most challenging and rewarding work, a full-time mother. Although I am still learning on the job and striving to be a better mother in every aspect, I think it is time for me to get another challenge, which is to be a programmer. </p>
+        <p>My most recent full-time work outside home was analyzing data using SQL. I really enjoyed the logical thinking and problem solving process. I was eager to learn more programming languages when I recently had some free time at home, and that was how I found Founders and Coders online in November 2018. I started to work on the prerequisites since then. It has been a great challenge for me to complete everything before the application deadline, because my son still needs a lot of my care and attention. </p>
+        <p>I will try my best to complete more tasks on Codewars and freeCodeCamp in the future months regardless whether I will be lucky enough to be in the next cohort. It makes me feel good to learn a little more each day. Thank you for introducing me these great websites! </p>
+
 
       <h2 id="work">MY WORK</h2>
       <p>Here are: </p>
         <ul>
           <li>the link to my <a href = "https://freecodecamp.org">freeCodeCamp</a> page</li>
           <li>the link to my <a href = "https://www.codewars.com/users/Rachyanh">Codewars</a> page</li>
-          <li>the link back to the GitHub repo</li>
+          <li>the link back to the <a href = "https://github.com/Rachyanh/rachyanh.github.io">GitHub repo</li>
           <li>to be continued...</li>
         </ul>
 
