--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
     <style>
-      p, ul, ol, li {
+      p, ul, li {
         font-family: Inconsolata, monospace;
         font-size: 20px;
         color: #444;
-        line-height: 150%
+        line-height: 160%
       }
       h1, h2, h3 {
         font-family: Inconsolata, monospace;
-        font-size: 30px;
+        font-size: 40px;
         color: #444;
         text-align: center;
         line-height: 150%;
@@ -26,7 +26,7 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-        margin: 40px auto
+        margin: 50px auto
       }
       nav {
         margin: 0;
@@ -39,7 +39,7 @@
         background-color: #f5f5f5;
         transition: height 0.3s line-height 0.3s
        }
-      nav ul {
+      /*nav ul {
         max-width: 980px;
         margin: auto;
         display: -webkit-box;
@@ -52,7 +52,7 @@
         -ms-flex-align: center;
         align-items: center;
         height: 100%
-      }
+      }*/
       nav a {
         display: inline;
         list-style-type: none;
