--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
       h1, h2, h3 {
         font-family: Inconsolata, monospace;
-        font-size: 40px;
+        font-size: 35px;
         color: #444;
         text-align: center;
         line-height: 150%;
@@ -26,7 +26,7 @@
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-        margin: 50px auto
+        margin: 60px auto
       }
       nav {
         margin: 0;
@@ -39,7 +39,7 @@
         background-color: #f5f5f5;
         transition: height 0.3s line-height 0.3s
        }
-      /*nav ul {
+      nav ul {
         max-width: 980px;
         margin: auto;
         display: -webkit-box;
@@ -52,14 +52,15 @@
         -ms-flex-align: center;
         align-items: center;
         height: 100%
-      }*/
+      }
       nav a {
         display: inline;
         list-style-type: none;
         line-height: 20vh;
         transition: line-height 0.3s;
         padding: 0 10px 0 10px;
-        text-align: center
+        text-align: center;
+        text-decoration: none
       }
       nav a:hover, nav .desktop-only a:active {
         cursor: pointer
@@ -117,7 +118,7 @@
         <ul>
           <li>the link to my <a href = "https://freecodecamp.org">freeCodeCamp</a> page</li>
           <li>the link to my <a href = "https://www.codewars.com/users/Rachyanh">Codewars</a> page</li>
-          <li>the link back to the <a href = "https://github.com/Rachyanh/rachyanh.github.io">GitHub repo</li>
+          <li>the link back to the <a href = "https://github.com/Rachyanh/rachyanh.github.io">GitHub repo</a></li>
           <li>to be continued...</li>
         </ul>
 
