--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <li>to be continued...</li>
         </ul>
 
-      <h3 id="#contact">CONTACT ME</h3>
+      <h3 id="contact">CONTACT ME</h3>
       <a href="mailto:rachelyanhe@gmail.com">
         <p>email: rachelyanhe@gmail.com</p>
       </a>
