--- a/index.html
+++ b/index.html
@@ -1,99 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="author">
+    <title> Rachel's Website </title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-    <style>
-      p, ul, li {
-        font-family: Inconsolata, monospace;
-        font-size: 20px;
-        color: #444;
-        line-height: 160%
-      }
-      h1, h2, h3 {
-        font-family: Inconsolata, monospace;
-        font-size: 35px;
-        color: #444;
-        text-align: center;
-        line-height: 150%;
-        margin-top: 150px;
-        margin-bottom: 30px
-      }
-      img {
-        width: 200px;
-        heigth: 200px;
-        display: block;
-        border-radius: 100%;
-        background-size: cover;
-        background-position: center center;
-        background-repeat: no-repeat;
-        margin: 60px auto
-      }
-      nav {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 15vh;
-        min-height: 44px;
-        position: fixed;
-        z-index: 10;
-        background-color: #f5f5f5;
-        transition: height 0.3s line-height 0.3s
-       }
-      nav ul {
-        max-width: 980px;
-        margin: auto;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-        justify-content: space-between;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        height: 100%
-      }
-      nav a {
-        display: inline;
-        list-style-type: none;
-        line-height: 20vh;
-        transition: line-height 0.3s;
-        padding: 0 10px 0 10px;
-        text-align: center;
-        text-decoration: none
-      }
-      nav a:hover, nav .desktop-only a:active {
-        cursor: pointer
-      }
-      nav a:hover h4, nav a:active h4 {
-        color: #78B7BA
-      }
-      nav a:hover .nav-dd, nav a:active .nav-dd {
-        display: block
-      }
-      nav h4 {
-        display: inline;
-        letter-spacing: 5px;
-        font-family: Inconsolata;
-        color: #333;
-        font-size: 20px;
-        padding: 50px;
-      }
-      .animate-header {
-        animation: landing 3s;
-        -moz-animation: landing 3s;
-        -webkit-animation: landing 3s;
-        -o-animation: landing 3s
-       }
-
-      .container {
-        max-width: 800px;
-        margin: auto;
-        padding: 30px;
-        margin-bottom: 30px
-      }
-
-     </style>
   </head>
 
   <body>
