--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="container">
       <h1 id="about">ABOUT ME</h1>
         <img src="/image.jpeg" Alt="Rachel with her son">
-        <p>Hi, my name is Rachel Chen. For the past two years, I have been doing the most challenging and rewarding work, a full-time mother. Although I am still learning on the job and striving to be a better mother in every aspect, I think it is time for me to get another challenge, which is to be a programmer. </p>
-        <p>My most recent full-time work outside home was analyzing data using SQL. I really enjoyed the logical thinking and problem solving process. I was eager to learn more programming languages when I recently had some free time at home, and that was how I found Founders and Coders online in November 2018. I started to work on the prerequisites since then. It has been a great challenge for me to complete everything before the application deadline, because my son still needs a lot of my care and attention. </p>
-        <p>I will try my best to complete more tasks on Codewars and freeCodeCamp in the future months regardless whether I will be lucky enough to be in the next cohort. It makes me feel good to learn a little more each day. Thank you for introducing me these great websites! </p>
+        <p>Hi, my name is Rachel Chen. For the past few years, I have been doing the most challenging and rewarding work, a full-time mother. Although I am still learning on the job and striving to be a better mother in every aspect, I think it is time for me to get back to my career track. </p>
+        <p>My most recent full-time work outside home was analyzing data using SQL. I really enjoyed the logical thinking and problem solving process. As a Healthcare Analyst, in addition to developing a variety of complex ad hoc reports and trend analyses using SQL and Excel, I was sometimes given projects, such as forecasting number of patients and revenue for a potential site of the company. These projects and experience have greatly sharpened my analytic and problem-solving skills. When my previous employer established a LLC to help other community clinics reach their electronic health record goal, I was added more responsibilities, which included all data support for the LLC. I have learned the importance of multitasking and prioritizing in the fast-paced working environment. It was a tough decision to quit the job I loved and move to the UK, where my husband pursued his master degree and career, especially when my manager told me about the promotion I would get in two months.  </p>
+        <p>I am a fast learner and I have never stopped learning. I will show you how quickly I can adjust myself and pick up multiple data analytics tools, just like how I became data savy from an accountant who knew nothing about SQL. Please be in contact to schedule an interview at your convenience. Thank you for your time and consideration. </p>
 
 
       <h2 id="work">MY WORK</h2>
@@ -38,6 +38,7 @@
       <a href="mailto:rachelyanhe@gmail.com">
         <p>email: rachelyanhe@gmail.com</p>
       </a>
+      <p>phone: 07979 881731</p>
     </div>
   </body>
 </html>
