--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
 
 
       <h2 id="work">MY WORK</h2>
-      <p>Here are: </p>
+      <img src="/resume.pdf" Alt="Rachel's CV">
+      <!--
+        <p>Here are: </p>
         <ul>
           <li>the link to my <a href = "https://freecodecamp.org">freeCodeCamp</a> page</li>
           <li>the link to my <a href = "https://www.codewars.com/users/Rachyanh">Codewars</a> page</li>
           <li>the link back to the <a href = "https://github.com/Rachyanh/rachyanh.github.io">GitHub repo</a></li>
           <li>to be continued...</li>
         </ul>
+      -->
 
       <h3 id="contact">CONTACT ME</h3>
       <a href="mailto:rachelyanhe@gmail.com">
