--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
       <h2 id="work">MY WORK</h2>
-      <img src="/resume.pdf" Alt="Rachel's CV">
+      <img src="/CV - Rachel Chen.pdf" Alt="Rachel's CV">
       <!--
         <p>Here are: </p>
         <ul>
