--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <p>I am a fast learner and I have never stopped learning. I will show you how quickly I can adjust myself and pick up multiple data analytics tools, just like how I became data savvy from an accountant, who knew nothing about SQL. Please be in contact to schedule an interview at your convenience. Thank you for your time and consideration. </p>
 
 
-      <h2 id="work">MY WORK</h2>
-      <img src="/CV - Rachel Chen.pdf" Alt="Rachel's CV">
+      <h2 id="work">MY RESUME</h2>
+      <embed src="/CV - Rachel Chen.pdf" width="800px" height="2100px" />
       <!--
         <p>Here are: </p>
         <ul>
