--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
       <h2 id="work">MY RESUME</h2>
-      <embed src="/CV - Rachel Chen.pdf" width="800px" height="2100px" />
+      <embed src="CV - Rachel Chen.pdf" width="800px" height="2100px" />
       <!--
         <p>Here are: </p>
         <ul>
