--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav id="navbar">
       <ul class="animate-header">
         <a href="#about"><h4>ABOUT ME</h4></a>
-        <a href="#work"><h4>MY WORK</h4></a>
+        <a href="#work"><h4>MY RESUME</h4></a>
         <a href="#contact"><h4>CONTACT ME</h4></a>
       </ul>
     </nav>
@@ -26,7 +26,7 @@
 
 
       <h2 id="work">MY RESUME</h2>
-      <embed src="CV - Rachel Chen.pdf" width="900px" height="1000px" />
+      <embed src="CV - Rachel Chen.pdf" width="900px" height="1100px" />
       <!--
         <p>Here are: </p>
         <ul>
