--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
       <h2 id="work">MY RESUME</h2>
-      <embed src="CV - Rachel Chen.pdf" width="880px" height="1200px" />
+      <embed src="CV - Rachel Chen.pdf" width="870px" height="1280px" />
       <!--
         <p>Here are: </p>
         <ul>
@@ -41,7 +41,7 @@
       <a href="mailto:rachelyanhe@gmail.com">
         <p>email: rachelyanhe@gmail.com</p>
       </a>
-      <p>tel: 07979 881731</p>
+      <p>tel: 07979 881 731</p>
     </div>
   </body>
 </html>
